test/Fail/NoNoTerminationCheck.err
NoNoTerminationCheck.agda:10.1-11.6: error: [TerminationIssue]
Termination checking failed for the following functions:
  g
Problematic calls:
  g (at NoNoTerminationCheck.agda:11.5-6)
